[workspace]
members = [
    "bin",
    "common/config",
    "common/fs",
    "common/http",
    "common/k8s",
    "common/metrics",
    "common/middleware",
    "common/journald",
    "common/state",
    "common/notify_stream",
    "api",
    "utils/metrics-recorder",
]

[profile.release]
opt-level = 3
debug = true

[profile.dev]
opt-level = 0

[patch.crates-io]
ring = { git = "https://github.com/ibm/ring.git", branch = "ppc-0.16.20" }
rcgen = { git = "https://github.com/KeerthanaAP/rcgen.git", branch = "master"} 
